# grpc-asgi-django-demo

./: .clang-format  .gitignore  CONTRIBUTING.md  COPYING.BSD-3-CLAUSE  Dockerfile  README.md  SECURITY.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
docs/: architecture.md  comparisons.md  demo.md
envoy/: envoy.yaml  x_http_code_as_status.lua
proto/: README.md  hatch_build.py  pyproject.toml
proto/proto/grpc_asgi_django_demo/proto/v1/: service.proto
scripts/: generate_env.sh
server/: entrypoint.sh  health_check.sh  pyproject.toml
server/src/grpc_asgi_django_demo/server/: __main__.py  asgi_impl.py  demo_impl.py  util.py
server/src/grpc_asgi_django_demo/server/django/: asgi.py  manage.py  settings.py  urls.py
