[project]
name = "grpc_asgi_django_demo_server"
version = "0.1.0"
requires-python = ">=3.12"
authors = [
    { name = "Michael Farrell", email = "micolous+git@gmail.com" },
]
dependencies = [
    # https://protobuf.dev/support/cross-version-runtime-guarantee/
    "grpcio==1.70.0",
    "grpcio-health-checking==1.70.0",
    "grpcio-reflection==1.70.0",
    "grpcio-status==1.70.0",
    "protobuf>=5.28.2,<6",
    "grpc_asgi_django_demo_proto",
    "urllib3>=2.2.3",
    "httpx>=0.28.1",
    "django>=5.1.6",
    "asgiref>=3.8.1",
]
license = "Apache-2.0 OR BSD-3-Clause"
classifiers = [
    "Framework :: Django :: 5.1",
    "Private :: Do Not Upload",
]

[project.scripts]
grpc-asgi-django-demo-server = "grpc_asgi_django_demo.server.__main__:main"
gadd-manage = "grpc_asgi_django_demo.server.django.manage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
only-include = ["src", "entrypoint.sh"]

[tool.hatch.build.targets.wheel]
packages = ["src/grpc_asgi_django_demo"]

[tool.uv]
# Always rebuild *_pb2.py files from .proto
reinstall-package = [
    "grpc_asgi_django_demo_proto",
]

[tool.uv.workspace]
members = [
    "../proto",
]

[tool.uv.sources]
grpc_asgi_django_demo_proto = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytype>=2024.10.11",
    "ruff>=0.12.7",
    "types-protobuf==5.27.*",
]

[tool.pytype]
inputs = [
    "src",
]
exclude = [
    "**/*_test.py",
    "**/test_*.py",
]
pythonpath = "./src"
